{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 8,
  "lineage": "4ac56809-5393-4b96-2f73-377542cbeb1d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eb5749e5a5699e",
            "arn": "arn:aws:ec2:us-east-1:753805730144:instance/i-086cb4c2de46ce514",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086cb4c2de46ce514",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b8154b60c7d86401",
            "private_dns": "ip-172-31-87-50.ec2.internal",
            "private_ip": "172.31.87.50",
            "public_dns": "ec2-3-86-207-214.compute-1.amazonaws.com",
            "public_ip": "3.86.207.214",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0656142d64afd2e0d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bfc142a0ea45166d",
            "tags": {
              "Name": "Webserver-ec2-instance-us-east-1a"
            },
            "tags_all": {
              "Name": "Webserver-ec2-instance-us-east-1a"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d886f38e0d7db32",
              "sg-0b3339d7f4c156223"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.vm_image_template",
            "data.aws_availability_zones.my_avail_zones",
            "data.aws_ec2_instance_type_offerings.my_ins_type"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eb5749e5a5699e",
            "arn": "arn:aws:ec2:us-east-1:753805730144:instance/i-0a93ff27755e8e7d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a93ff27755e8e7d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-013af2d3e626dacb9",
            "private_dns": "ip-172-31-19-214.ec2.internal",
            "private_ip": "172.31.19.214",
            "public_dns": "ec2-3-93-45-240.compute-1.amazonaws.com",
            "public_ip": "3.93.45.240",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0901d7ffd738e3639",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022016387447fabef",
            "tags": {
              "Name": "Webserver-ec2-instance-us-east-1b"
            },
            "tags_all": {
              "Name": "Webserver-ec2-instance-us-east-1b"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d886f38e0d7db32",
              "sg-0b3339d7f4c156223"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.vm_image_template",
            "data.aws_availability_zones.my_avail_zones",
            "data.aws_ec2_instance_type_offerings.my_ins_type"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eb5749e5a5699e",
            "arn": "arn:aws:ec2:us-east-1:753805730144:instance/i-0127cb94df59ef9ad",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0127cb94df59ef9ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-068e9191205f5ad6c",
            "private_dns": "ip-172-31-47-37.ec2.internal",
            "private_ip": "172.31.47.37",
            "public_dns": "ec2-18-234-67-234.compute-1.amazonaws.com",
            "public_ip": "18.234.67.234",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0712459514f8e4f20",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0efebe0c7b8c20748",
            "tags": {
              "Name": "Webserver-ec2-instance-us-east-1c"
            },
            "tags_all": {
              "Name": "Webserver-ec2-instance-us-east-1c"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d886f38e0d7db32",
              "sg-0b3339d7f4c156223"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.vm_image_template",
            "data.aws_availability_zones.my_avail_zones",
            "data.aws_ec2_instance_type_offerings.my_ins_type"
          ]
        },
        {
          "index_key": "us-east-1d",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eb5749e5a5699e",
            "arn": "arn:aws:ec2:us-east-1:753805730144:instance/i-0cf25701ed3240907",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cf25701ed3240907",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0922e695ed8294944",
            "private_dns": "ip-172-31-0-38.ec2.internal",
            "private_ip": "172.31.0.38",
            "public_dns": "ec2-44-198-186-106.compute-1.amazonaws.com",
            "public_ip": "44.198.186.106",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f64a7189cf7431b3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb81dbdab7e5e071",
            "tags": {
              "Name": "Webserver-ec2-instance-us-east-1d"
            },
            "tags_all": {
              "Name": "Webserver-ec2-instance-us-east-1d"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d886f38e0d7db32",
              "sg-0b3339d7f4c156223"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.vm_image_template",
            "data.aws_availability_zones.my_avail_zones",
            "data.aws_ec2_instance_type_offerings.my_ins_type"
          ]
        },
        {
          "index_key": "us-east-1f",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f2eb5749e5a5699e",
            "arn": "arn:aws:ec2:us-east-1:753805730144:instance/i-011d5a5c2a8d11674",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1f",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-011d5a5c2a8d11674",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f4704d7fcdd4f17e",
            "private_dns": "ip-172-31-67-244.ec2.internal",
            "private_ip": "172.31.67.244",
            "public_dns": "ec2-3-239-115-203.compute-1.amazonaws.com",
            "public_ip": "3.239.115.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-036d1537c6464b0da",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "vpc-ssh",
              "vpc-web"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06ba9c94b0159c6a8",
            "tags": {
              "Name": "Webserver-ec2-instance-us-east-1f"
            },
            "tags_all": {
              "Name": "Webserver-ec2-instance-us-east-1f"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06d886f38e0d7db32",
              "sg-0b3339d7f4c156223"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc-ssh",
            "aws_security_group.vpc-web",
            "data.aws_ami.vm_image_template",
            "data.aws_availability_zones.my_avail_zones",
            "data.aws_ec2_instance_type_offerings.my_ins_type"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:security-group/sg-06d886f38e0d7db32",
            "description": "Dev VPC SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d886f38e0d7db32",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "vpc-ssh",
            "name_prefix": "",
            "owner_id": "753805730144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-ssh"
            },
            "tags_all": {
              "Name": "vpc-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a08e72c7c47e504d"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:753805730144:security-group/sg-0b3339d7f4c156223",
            "description": "Dev VPC Web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and ports outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3339d7f4c156223",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "vpc-web",
            "name_prefix": "",
            "owner_id": "753805730144",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-web"
            },
            "tags_all": {
              "Name": "vpc-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a08e72c7c47e504d"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}